gitops-factory/namespaces/identity-svc/shared.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: identity-svc
  labels:
    app.kubernetes.io/name: default-deny-all
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"v1","kind":"redacted"}'
  uid: fd25b2d4-57d9-4d63-9fed-98b88ef9f58b
  resourceVersion: '5796087'
  generation: 4
  creationTimestamp: '2025-07-14T08:11:22Z'
  managedFields:
  - manager: kubectl-client-side-apply
    operation: Update
    apiVersion: v1
    time: '2025-07-14T08:11:22Z'
    fieldsType: FieldsV1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
